--- a/Tests/tests.csproj
+++ b/Tests/tests.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DayOne\DayOne.csproj" />
+    <ProjectReference Include="..\DayTwo\DayTwo.csproj" />
   </ItemGroup>
 
 </Project>
