--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\DayOne\DayOne.csproj" />
     <ProjectReference Include="..\DayTwo\DayTwo.csproj" />
     <ProjectReference Include="..\DayThree\DayThree.csproj" />
+    <ProjectReference Include="..\DayFour\DayFour.csproj" />
   </ItemGroup>
 
 </Project>
