--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -29,6 +29,7 @@
     <ProjectReference Include="..\DayFive\DayFive.csproj" />
     <ProjectReference Include="..\DaySix\DaySix.csproj" />
     <ProjectReference Include="..\DaySeven\DaySeven.csproj" />
+    <ProjectReference Include="..\DayEight\DayEight.csproj" />
   </ItemGroup>
 
 </Project>
